Project

General

Profile

Actions

Bug #20378

closed

rgw: fix copy object err when bucket with specified placement rule

Added by fang yuxiang almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

one can reproduce with steps:

1. create a src bucket with a specified placement rule, which has different data pool from the default placement rule.
2. create a dst bucket with same placement rule as the src bucket
3. upload a large object test_obj using multipart to src bucket
4. do s3cmd cp s3://src/test_obj s3://dst/test_obj

then will see the result:
WARNING: Key not found s3://src/test_obj

Actions #2

Updated by Orit Wasserman almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Orit Wasserman almost 7 years ago

  • Status changed from Fix Under Review to 17
Actions #4

Updated by Casey Bodley over 6 years ago

  • Status changed from 17 to Resolved
Actions

Also available in: Atom PDF