rgw: fix err when copy object in bucket with specified placement rule

Fixes: http://tracker.ceph.com/issues/20378

Signed-off-by: fang yuxiang <fang.yuxiang@eisoo.com>